Change shipping type

--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,8 @@
   "name": "moova/magento2",
   "description": "Módulo de envíos Moova para Magento 2",
   "type": "magento2-module",
-  "version": "1.0.8",
-  "require": {
-  },
+  "version": "1.0.9",
+  "require": {},
   "autoload": {
     "files": [
       "registration.php"
