--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "moova/magento2",
+  "name": "moova/magento2-module",
   "description": "Módulo de envíos Moova para Magento 2",
   "type": "magento2-module",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "require": {},
   "autoload": {
     "files": [
